--- a/CSS file/addemployee.css
+++ b/CSS file/addemployee.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     height: 100%;
-    font-family: Roboto;
 }
 
 .header {
@@ -91,6 +90,7 @@ body {
     font-size: 16px;
     color: #42515f;
     opacity: 1;
+    font-family: Roboto;
 }
 
 .input {
@@ -153,13 +153,13 @@ select {
     background: #f5f5f5;
 }
 
+.submitButton {
+    margin-right: 30px;
+}
+
 .cancelButton {
     text-decoration: none;
     text-align: center;
-}
-
-.submitButton {
-    margin-right: 30px;
 }
 
 @media only screen and (max-width:600px) {
@@ -226,8 +226,8 @@ a.button:hover {
 }
 
 error-output {
-    background-color: red;
-    font-size: 15px;
-    font: italic;
-    font-family: sans-serif;
+    margin-left: 10px;
+    font-size: 12px;
+    font-style: italic;
+    color: red;
 }
